--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.6.0",
+    "prismjs": "^1.25.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-highlight": "^0.14.0",
+    "react-hook-form": "^7.21.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-typical": "^0.1.3",
