--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.5",
     "react-typical": "^0.1.3",
     "web-vitals": "^1.1.2"
   },
