--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.17.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
@@ -21,6 +22,7 @@
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.21.0",
+    "react-redux": "^7.2.6",
     "react-router": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
