--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.2.3",
     "@mui/styles": "^5.2.3",
@@ -29,6 +31,7 @@
     "react-simple-code-editor": "^0.11.0",
     "react-syntax-highlighter": "^15.4.5",
     "react-typical": "^0.1.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
