--- a/package.json
+++ b/package.json
@@ -13,26 +13,23 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.17.3",
+    "@tinymce/tinymce-react": "^3.13.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.6.0",
-    "prism-react-renderer": "^1.2.1",
-    "prismjs": "^1.25.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.21.0",
+    "react-html-parser": "^2.0.2",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.6",
     "react-router": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-simple-code-editor": "^0.11.0",
-    "react-syntax-highlighter": "^15.4.5",
+    "react-tinymce": "^0.7.0",
     "react-typical": "^0.1.3",
-    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
