--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.6.0",
+    "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
