--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@tinymce/tinymce-react": "^3.13.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "dompurify": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.6.0",
+    "html-react-parser": "^1.4.4",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
