--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@material-ui/core": "^4.12.3",
-    "@mui/material": "^5.2.3",
+    "@mui/lab": "^5.0.0-alpha.63",
+    "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
@@ -16,6 +17,7 @@
     "@tinymce/tinymce-react": "^3.13.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "dompurify": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.6.0",
@@ -23,6 +25,7 @@
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.21.0",
     "react-html-parser": "^2.0.2",
