--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@tinymce/tinymce-react": "^3.13.0",
+    "antd": "^4.18.4",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
@@ -29,6 +30,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.21.0",
     "react-html-parser": "^2.0.2",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.6",
     "react-router": "^6.1.0",
@@ -36,6 +38,7 @@
     "react-scripts": "4.0.3",
     "react-tinymce": "^0.7.0",
     "react-typical": "^0.1.3",
+    "validator": "^13.7.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -61,5 +64,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@ant-design/icons": "^4.7.0"
   }
 }
